--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -27,9 +27,8 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
-    "date-fns": "^4.1.0",
+    "dayjs": "^1.11.10",
     "lucide-react": "^0.510.0",
-    "moment": "^2.30.1",
     "next": "^14.2.15",
     "next-auth": "4.24.7",
     "react": "^18.2.0",
